--- a/SearchApp/Localizable.strings
+++ b/SearchApp/Localizable.strings
@@ -8,3 +8,6 @@
 
 "search_bar_placeholder" = "Search movies";
 "search_result_error" = "No result found";
+"error_unwrapping_url" = "Error unwrapping URL";
+"error_getting_data" = "Error getting data";
+"error_getting_api" = "Error getting API data: %@";
